# Plataforma_Bi

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: __init__.py  auth.py  catalog.py  connectors.py  exporter.py  query.py  scheduler.py  semantic.py
backend/app/core/: cache.py  config.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  chart.py  chart_metric.py  dashboard.py  dashboard_filter.py  data_source.py  dataset.py  field.py  metric.py  organization.py  permission.py  user.py
backend/app/schemas/: __init__.py  chart.py  dashboard.py  dashboard_filter.py  data_source.py  dataset.py  field.py  metric.py  organization.py  permission.py  query.py  user.py
backend/app/services/: __init__.py  base.py
backend/app/services/auth/: service.py
backend/app/services/catalog/: service.py
backend/app/services/connectors/: service.py
backend/app/services/exporter/: service.py
backend/app/services/query/: service.py
backend/app/services/scheduler/: service.py
backend/app/services/semantic/: service.py
frontend/: Dockerfile  README.md  index.html  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: FilterPanel.tsx  MetricEditor.tsx  Widget.tsx
frontend/src/layouts/: DashboardLayout.tsx
frontend/src/pages/: DashboardEditorPage.tsx  DashboardListPage.tsx
frontend/src/services/: api.ts
frontend/src/store/: dashboardStore.ts
scripts/: start-dev.sh
(+1 files in other folders)
